# descan

./: .gitignore  CMakeLists.txt  README.md  client_secret.json
Descan/: .gitignore  Descan.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Descan/forms/: dialogmail.ui  mainwindow.ui
Descan/headers/: dialogmail.h  displayarea.h  drive.h  image.h  mainwindow.h  pdfhandler.h
Descan/icons/: .gitignore
Descan/resources/: resources.qrc
Descan/sources/: dialogmail.cpp  displayarea.cpp  image.cpp  mainwindow.cpp  pdfhandler.cpp
Descan/src/: dialogmail.cpp  displayarea.cpp  drive.cpp  image.cpp  main.cpp  mainwindow.cpp  pdfhandler.cpp
Descan/tests/: test_image.cpp  test_mail.cpp
PDFNetC64/Doc/PDFNetC/: _action_parameter_8h_source.html  _annot_8h.html  _annot_8h_source.html  _bookmark_8h_source.html  _byte_range_8h.html  _byte_range_8h_source.html  _c_a_d_convert_options_8h.html  _c_a_d_convert_options_8h_source.html  _caret_8h_source.html  _check_box_widget_8h_source.html  _circle_8h_source.html  _color_space_8h_source.html  _combo_box_widget_8h_source.html  _config_8h_source.html  _convert_8h_source.html  _diff_options_8h.html  _diff_options_8h_source.html  _digital_signature_field_8h.html  _digital_signature_field_8h_source.html  _document_conversion_8h_source.html  _element_8h_source.html  _element_builder_8h.html  _element_builder_8h_source.html  _embedded_timestamp_verification_result_8h.html  _embedded_timestamp_verification_result_8h_source.html  _exception_8h_source.html  _f_d_f_doc_8h_source.html  _f_d_f_field_8h_source.html  _file_attachment_8h_source.html  _flattener_8h_source.html  _font_8h.html  _font_8h_source.html  _free_text_8h_source.html  _g_state_8h_source.html  _group_8h_source.html  _h_t_m_l2_p_d_f_8h_source.html  _highlight_8h_source.html  _highlights_8h_source.html  _image_8h_source.html  _ink_8h_source.html  (+344 more)
PDFNetC64/Headers/Common/: RecentlyUsedCache.h
PDFNetC64/Headers/Filters/: MappedFile.h
Specifikacija/: specifikacija.md
build-Descan-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Descan  Makefile  moc_mainwindow.cpp  qrc_resources.cpp  ui_mainwindow.h
(+184 files in other folders)
